feat: Geração de certificado de participação com validação
